# OpenAI_projects

./: README.md  pyproject.toml
shared_lib/: get_credential.py
spotify_playlist_bot/: playlist_generate.py
