[tool.poetry]
name = "openai-projects"
version = "0.1.0"
description = "python apps that leverage open AI chatgpt models and APIs"
authors = ["qianyu-berkeley <qianyu@berkeley.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
openai = "^0.28.1"
spotipy = "^2.23.0"
python-dotenv = "^1.0.0"

[tool.poetry.group.dev.dependencies]
openai = "^0.28.1"
python-dotenv = "^1.0.0"
pytest = "^7.4.2"
spotipy = "^2.23.0"
black = "^23.9.1"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
